Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29914

Auto add new files to cmake project is not working.

XMLWordPrintable

    • Linux/X11
    • 48a3a12b0 (12.0), c05ad8b44 (12.0), a8370aaf8 (12.0)

      One of the most usefull features, auto adding new files in the cmake project file, is not working. 
      Is it a feature or a bug?

      ___

      After patch cmake project manager don't add new files to correct subfolder but to parent CMakeLists.txt

      Wrong hierarchy of cmake project forlders parsing.Foundation1.tar.bz2

        1. QtCreator_cmake_add.mp4
          1.15 MB
          Oleg Shalnev
        2. CMakeLists.txt
          0.8 kB
          Oleg Shalnev
        3. cmake-lists-txt-no-bom.png
          94 kB
          Cristian Adam
        4. image-2023-12-11-22-55-31-285.png
          77 kB
          Oleg Shalnev
        5. Screenshot_20240122_143202-1.png
          12 kB
          Oleg Shalnev
        6. Foundation.tar.bz2
          7 kB
          Oleg Shalnev
        7. Foundation1.tar.bz2
          66 kB
          Oleg Shalnev
        8. foundation1.png
          193 kB
          Cristian Adam
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            kalpaspirit Oleg Shalnev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes