CMakePM: Fix bad "path" backtrace generation

CMake can generate backgraces with absolute paths, and the commit
246f33c20d1f9589a891223c820d009212d8bb00 removed this support from Qt
Creator.

This commit fixes this issue with absolute paths.

Fixes: QTCREATORBUG-29914
Change-Id: Ib911e80aee1ff9f4a26435f7e693f7766551cc90
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>